parser/tests/snapshots/errors__contract_const_pub.snap
---
source: parser/tests/errors.rs
expression: err

---
error: `const pub` should be written `pub const`
  ┌─ [test snippet]:2:2
  │
2 │  const pub x: u8
  │  ^^^^^^^^^


